# PrimeKG

./: pyproject.toml  requirements.txt
