[project]
name = "primekg"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Heinicke",email = "jonas.heinicke@helmholtz-hzi.de"}
]
readme = "README.md"
requires-python = ">=3.11"


[tool.poetry.dependencies]
appdirs = "*"
attrs = "*"
automat = "*"
bcrypt = "*"
beautifulsoup4 = "*"
bottleneck = "*"
brotlipy = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
click = "*"
colorama = "*"
constantly = "*"
cryptography = "*"
cssselect = "*"
cycler = "*"
docopt = "*"
filelock = "*"
fonttools = "*"
goatools = "*"
huggingface-hub = "*"
hyperlink = "*"
idna = "*"
igraph = "*"
importlib-metadata = "*"
incremental = "*"
itemadapter = "*"
itemloaders = "*"
jmespath = "*"
joblib = "*"
kiwisolver = "*"
lxml = "*"
matplotlib = "*"
mkl-fft = "*"
mkl-random = "*"
mkl-service = "*"
munkres = "*"
numexpr = "*"
numpy = "*"
packaging = "*"
pandas = "*"
parsel = "*"
patsy = "*"
pillow = "*"
protego = "*"
protobuf = "*"
pyasn1 = "*"
pyasn1-modules = "*"
pycparser = "*"
pydispatcher = "*"
pydot = "*"
pyhamcrest = "*"
pyopenssl = "*"
pyparsing = "*"
pysocks = "*"
python-dateutil = "*"
python-igraph = "*"
pytz = "*"
pyyaml = "*"
queuelib = "*"
regex = "*"
requests = "*"
requests-file = "*"
sacremoses = "*"
scikit-learn = "*"
scipy = "*"
scrapy = "*"
seaborn = "*"
service-identity = "*"
six = "*"
soupsieve = "*"
statsmodels = "*"
texttable = "*"
threadpoolctl = "*"
tldextract = "*"
tokenizers = "*"
torch = "*"
torchaudio = "*"
torchvision = "*"
tornado = "*"
tqdm = "*"
transformers = "*"
twisted = "*"
typing-extensions = "*"
urllib3 = "*"
w3lib = "*"
xlrd = "*"
xlsxwriter = "*"
zipp = "*"
zope-interface = "*"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
